--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,14 @@ h4 {
     margin: 10px;
 }
 
+.button {
+    margin: 0 5px;
+}
+
+.badge {
+    height: 25px;
+}
+
 @media only screen and (max-width: 600px) {
     .image {
         float: none;
